HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchDiagnostics/Expected.uv
//! Expected diagnostic metadata for the DispatchDiagnostics rejected-source specimen.

expectedDiagnostic("E-CON-0140", "diagnostics.20.Dispatch")
